--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ All colors MUST be HSL.
 
 @layer base {
   :root {
-    /* MaterialMatrix Color Palette - Terracotta Earth Tones */
+    /* RitzYard Color Palette - Terracotta Earth Tones */
     --background: 30 20% 97%;
     --foreground: 15 35% 20%;
 
